adding style to add and delete button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Velociraptor Owners</title>
 	<!--Ext JS-->
 	<link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all.css">
+	<link rel="stylesheet" href="style.css" type="text/css">
+
 	<script src="extjs/ext-all-debug.js"></script>
 	<!--Application JS-->
 	<script src="grid.js"></script>
