--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Velociraptor Owners</title>
+	<title>Personal Detail</title>
 	<!--Ext JS-->
 	<link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all.css">
 	<link rel="stylesheet" href="style.css" type="text/css">
